force-app/main/default/objects/Service_Subscription__c/Service_Subscription__c.object-meta.xml
<CustomObject>
    <label>Service_Subscription</label>
    <nameField>
        <label>Service_Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service_SubscriptionS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>