force-app/main/default/objects/Service_Subscription__c/fields/Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Number__c</fullName>
    <displayFormat>ServiceNo-{0000}</displayFormat>
    <label>Service Number</label>
    <type>AutoNumber</type>
</CustomField>